# quantum-rs

./: .gitignore  Cargo.toml  README.md  drive.toml
abm/: Cargo.toml
abm/analysis/: analysis_Li_K.ipynb  analysis_potassium.ipynb  analysis_tests.ipynb
abm/src/: abm_states.rs  consts.rs  lib.rs  main.rs  problems.rs  utility.rs
abm/src/problems/: hifi_double.rs  hifi_single.rs  lithium_potassium.rs  potassium_bound.rs  simple_abm.rs
benches/: Cargo.toml  dhat-heap.json
benches/benches/: inverses.rs  operators.rs
benches/src/: lib.rs  main.rs
distribute/: Cargo.toml
distribute/src/: main.rs
py_common/: aggregate_outputs.py  bounds_dependence.py  scattering_dependence.py  units.py  utility.py  wave_function.py
pyo3-crates/abm-py/: Cargo.toml  abm_py.pyi  pyproject.toml
pyo3-crates/abm-py/analysis/: tests.ipynb
pyo3-crates/abm-py/src/: lib.rs
pyo3-crates/scattering-problems-py/: Cargo.toml
pyo3-crates/scattering-problems-py/src/: lib.rs  potentials.rs
quantum/: Cargo.toml
quantum/src/: lib.rs  params.rs  problem_selector.rs  states.rs  units.rs  utility.rs
quantum/src/params/: particle.rs  particle_factory.rs  particles.rs
quantum/src/states/: braket.rs  operator.rs  spins.rs  state.rs  state_type.rs
quantum/src/units/: distance_units.rs  energy_units.rs  mass_units.rs
report/: bibliography.bib  report.tex
scattering-problems/: Cargo.toml
scattering-problems/analysis/: alkali_rotor_atom_model.ipynb  caf_rb_analysis.ipynb  li2_analysis.ipynb  spinless_srf_rb.ipynb  srf_rb_analysis.ipynb  srf_rb_analysis_bounds.ipynb  srf_rb_analysis_bounds_scalings.ipynb  srf_rb_analysis_potential.ipynb  ybf_rb_analysis.ipynb
scattering-problems/examples/: alkali_rotor_atom_model.rs  li2_feshbach.rs  rotor_caf_rb.rs  rotor_caf_rb_feshbach.rs  rotor_srf_rb.rs  rotor_srf_rb_bounds.rs  rotor_srf_rb_potential.rs  rotor_ybf.rs  spinless_alf_rb.rs  spinless_srf_rb.rs
scattering-problems/examples/common/: mod.rs  potential_cutting.rs  srf_rb_functionality.rs
scattering-problems/src/: alkali_atoms.rs  alkali_rotor.rs  alkali_rotor_atom.rs  angular_block.rs  field_bound_states.rs  lib.rs  operators.rs  potential_interpolation.rs  rkhs_interpolation.rs  rotor_atom.rs  uncoupled_alkali_rotor_atom.rs  utility.rs
scattering-solver/: Cargo.toml
scattering-solver/analysis/: tests.ipynb
scattering-solver/examples/: many_channel.rs  single_channel.rs  two_channel.rs
scattering-solver/src/: boundary.rs  lib.rs  log_derivatives.rs  log_derivatives_copy2.rs  main.rs  numerovs.rs  observables.rs  potentials.rs  problems.rs  propagator.rs  utility.rs
scattering-solver/src/log_derivatives/: diabatic.rs  johnson.rs
scattering-solver/src/numerovs/: bound_numerov.rs  dummy_numerov.rs  multi_numerov.rs  numerov_modifier.rs  propagator.rs  propagator_watcher.rs  single_numerov.rs
scattering-solver/src/numerovs/multi_numerov/: faer_backed.rs
scattering-solver/src/observables/: bound_states.rs  s_matrix.rs
scattering-solver/src/potentials/: composite_potential.rs  dispersion_potential.rs  function_potential.rs  gaussian_coupling.rs  masked_potential.rs  morse_long_range.rs  multi_coupling.rs  multi_diag_potential.rs  pair_potential.rs  potential.rs  potential_factory.rs
scattering-solver/src/problems/: multi_channel.rs  single_channel.rs
scattering-solver/src/problems/faer/: many_channels.rs  two_channel.rs
scattering-solver/src/problems/multi_channel/: many_channels.rs  two_channel.rs
scattering-solver/src/problems/nalgebra/: many_channels.rs  two_channel.rs
testing/: Cargo.toml
testing/src/: main.rs
