[workspace]
members = [
    "quantum",
    "abm",
    "pyo3-crates/abm-py",
    "scattering-solver",
    "scattering-problems", "benches",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
num = "0.4.3"
num-traits = "0.2.19"
faer = "0.20"
rayon = "1.6.0"
indicatif = { version = "0.17.9", features = ["rayon"] }
clebsch-gordan = { git = "https://github.com/Wleter/clebsch-gordan" }
hhmmss = "0.1.0"

[profile.dev.package.faer]
opt-level = 3
