[workspace]
members = [
    "quantum",
    "abm",
    "pyo3-crates/abm-py",
    "scattering-solver",
    "scattering-problems", 
    "distribute",
]
exclude = ["benches"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
num = {version = "0.4.3", features = ["serde"]}
faer = "0.20"
rayon = "1.6.0"
indicatif = { version = "0.17", features = ["rayon"] }
clebsch-gordan = { git = "https://github.com/Wleter/clebsch-gordan", branch = "master" }
hhmmss = "0.1.0"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"

[profile.dev.package.faer]
opt-level = 3
