[package]
name = "scattering-problems"
version.workspace = true
edition.workspace = true

[dependencies]
quantum = { path = "../quantum", features = ["faer", "spins"] }
scattering-solver = { path = "../scattering-solver" }
abm = { path = "../abm" }
faer = { workspace = true }
clebsch-gordan = { workspace = true }
hhmmss = { workspace = true }
indicatif = { workspace = true }
num = { workspace = true }
rayon = {workspace = true }
gauss-quad = "0.2.1"
spline-interpolation = { git = "https://github.com/Wleter/spline-interpolation.git" }

argmin = { version = "0.10.0", features = ["rayon"] }
argmin-math = "0.4"
argmin-observer-slog = "0.1.0"

[dev-dependencies]
approx = "0.5.1"