[package]
name = "scattering-problems"
version.workspace = true
edition.workspace = true

[dependencies]
quantum = { path = "../quantum", features = ["faer", "spins"] }
scattering-solver = { path = "../scattering-solver" }
abm = { path = "../abm" }
faer = { workspace = true }
clebsch-gordan = { workspace = true }
hhmmss = { workspace = true }
indicatif = { workspace = true }
num = { workspace = true }
rayon = {workspace = true }

# needed for examples todo! change examples to be its own crate i guess 

gauss-quad = "0.2.1"
spline-interpolation = { git = "https://github.com/Wleter/spline-interpolation.git" }

argmin = { version = "0.11.0", features = ["rayon"] }
argmin-math = "0.5"
argmin-observer-slog = "0.2.0"
rand = "0.9.2"
rand_xoshiro = "0.7.0"

regex = "1.11.1"

serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
approx = "0.5.1"