[package]
name = "scattering-solver"
version.workspace = true
edition.workspace = true

[dependencies]
num = { workspace = true }
num-traits = { workspace = true }
faer = { workspace = true }
rayon = { workspace = true }
quantum = { path = "../quantum", features = ["faer"] }
ndarray = { version = "0.16.1", optional = true }
nalgebra = { version = "0.33.0", optional = true }

[features]
default = []
ndarray = ["dep:ndarray", "quantum/ndarray"]
nalgebra = ["dep:nalgebra", "quantum/nalgebra"]