[package]
name = "scattering-solver"
version.workspace = true
edition.workspace = true

[dependencies]
num = { workspace = true }
faer = { workspace = true }
rayon = { workspace = true }
quantum = { path = "../quantum", features = ["faer"] }
serde = { workspace = true }
serde_json = { workspace = true }